# hybrid-runtime-blockchain-engine

./: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: auto-approve.yml  ci.yml  release.yml
cmd/server/: main.go  main_test.go
docker/: Dockerfile  prometheus.yml
docs/: DEVELOPER_GUIDE.md  design.md  requirements.md
internal/config/: config.go  config_test.go
internal/ffi/: bench_test.go  ffi.go  ffi_test.go  serialization.go  serialization_test.go  types.go  types_test.go  validation.go  validation_test.go
internal/loadtest/: generator.go  generator_test.go  metrics.go  report.go  report_test.go  tester.go  tester_test.go
internal/logging/: logger.go  logger_test.go
internal/mcp/: RUNTIME_TOOLS.md  input_validator.go  input_validator_test.go  rate_limiter.go  rate_limiter_test.go  server.go  server_test.go  tools.go  tools_example_test.go  tools_test.go
internal/metrics/: README.md  adapters.go  adapters_impl.go  adapters_impl_test.go  collector.go  collector_test.go  coverage_test.go  interfaces.go
internal/reorg/: bench_test.go  engine.go  engine_test.go  integration_test.go
internal/shutdown/: shutdown.go  shutdown_test.go
internal/streamer/: coverage_test.go  streamer.go  streamer_test.go
internal/worker/: bench_test.go  pool.go  pool_test.go
rust-core/: Cargo.toml
rust-core/src/: ffi.rs  lib.rs  state.rs  types.rs
