[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
